Fix cors issue, add functionality for blocking overlapping bookings

--- a/src/components/BookingBar/Calendar/Calendar.module.scss
+++ b/src/components/BookingBar/Calendar/Calendar.module.scss
@@ -56,6 +56,11 @@
       color: white;
       filter: brightness(1.8);
     }
+    &__booked {
+      background-color: #eee;
+      color: #aaa;
+      cursor: not-allowed;
+    }
   }
 }
 
